<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify">SPOTIFY STREAMER</string>
    <string name="project0_title">My Nanodegree Apps!</string>
    <string name="scores">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="bigger">BUILD IT BIGGER</string>
</resources>
