<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/main_layout">

    <Button
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:text="@string/spotify"
        android:id="@+id/spotify"
        android:layout_marginTop="41dp"
        android:textColor="#fff"
        android:background="#3F51B5"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/scores"
        android:layout_alignStart="@+id/scores"
        android:onClick="seOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project0_title"
        android:id="@+id/textView"
        android:textSize="27sp"
        android:textColor="#000"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:text="@string/scores"
        android:id="@+id/scores"
        android:textColor="#fff"
        android:background="#3F51B5"
        android:nestedScrollingEnabled="false"
        android:layout_below="@+id/spotify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="seOnClick" />

    <Button
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:text="@string/library"
        android:id="@+id/library"
        android:textColor="#fff"
        android:background="#3F51B5"
        android:nestedScrollingEnabled="false"
        android:layout_below="@+id/scores"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="seOnClick" />

    <Button
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:text="@string/bigger"
        android:id="@+id/bigger"
        android:textColor="#fff"
        android:background="#3F51B5"
        android:nestedScrollingEnabled="false"
        android:layout_below="@+id/library"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="seOnClick" />

    <Button
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:text="XYZ READER"
        android:id="@+id/xyz"
        android:textColor="#fff"
        android:background="#3F51B5"
        android:nestedScrollingEnabled="false"
        android:layout_below="@+id/bigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="seOnClick" />

    <Button
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:text="CAPSTONE: MY OWN APP"
        android:id="@+id/castone"
        android:textColor="#fff"
        android:background="#1A237E"
        android:nestedScrollingEnabled="false"
        android:layout_below="@+id/xyz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="seOnClick" />
</RelativeLayout>
